# snapshot

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  NEWS  README.md  TROUBLESHOOTING.md  deny.toml  meson.build  meson_options.txt  snapshot.doap
.gitlab/issue_templates/: Bug.md
aperture/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  meson.build
aperture/src/: camera.rs  code_detector.rs  device_provider.rs  enums.rs  error.rs  lib.rs  pipeline_tee.rs  utils.rs  viewfinder.rs
aperture/src/capi/: camera.rs  device_provider.rs  mod.rs  viewfinder.rs
build-aux/: dist-vendor.sh  move-gst-plugins.sh  org.gnome.Snapshot.Devel.json  org.gnome.World.Snapshot.Devel.json
data/: meson.build  org.gnome.Snapshot.desktop.in.in  org.gnome.Snapshot.gschema.xml.in  org.gnome.Snapshot.metainfo.xml.in.in  org.gnome.Snapshot.service.in  org.gnome.World.Snapshot.gschema.xml.in  org.gnome.World.Snapshot.metainfo.xml.in.in
data/resources/: meson.build  org.gnome.Snapshot.metainfo.xml.in.in  resources.gresource.xml  resources.gresource.xml.in  style.css
data/resources/ui/: camera.ui  camera_controls.ui  gallery.ui  preferences_window.ui  qr_bottom_sheet.ui  shortcuts.ui  window.ui
libaperture/: Cargo.toml
libaperture/include/: aperture.h
libaperture/src/: camera.rs  device_provider.rs  lib.rs  viewfinder.rs
po/: LINGUAS  POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lt.po  lv.po  meson.build  nb.po  ne.po  nl.po  nn.po  oc.po  (+20 more)
src/: application.rs  config.rs.in  device_provider.rs  enums.rs  error.rs  i18n.rs  main.rs  meson.build  utils.rs
src/objects/: application.rs  camera_paintable.rs  device.rs  device_provider.rs  mod.rs  pipeline.rs  wayland_listener.rs
src/widgets/: camera.rs  camera_controls.rs  camera_row.rs  flash_bin.rs  gallery.rs  gallery_button.rs  gallery_item.rs  gallery_picture.rs  gallery_video.rs  guidelines_bin.rs  mod.rs  preferences_window.rs  qr_bottom_sheet.rs  qr_screen_bin.rs  shutter_button.rs  sliding_view.rs  video_player.rs  window.rs
