[workspace]
members = [ "aperture" ]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "GPL-3.0-or-later"
authors = ["The GNOME Project"]

[workspace.dependencies]
log = "0.4"
futures-channel = "0.3.30"
gst = { package = "gstreamer", version = "0.23" , features = ["v1_20"] }
gtk = { package = "gtk4", version = "0.9", features = ["gnome_46", "v4_16"] }

[package]
name = "snapshot"
version = "46.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# This is manually enabled by meson
[features]
portal = ["dep:ashpd"]
x11 = ["ashpd?/gtk4_x11"]

[profile.release]
lto = true

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_7"] }
anyhow = "1.0"
ashpd = { version = "0.10", default-features = false, features = ["gtk4_wayland", "tracing", "async-std"], optional = true }
futures-channel = "0.3.26"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glycin = { version = "2.1.0-alpha.1", features = ["gdk4"] }
gst = { workspace = true }
gtk = { workspace = true, features = ["gnome_47"] }
log = { workspace = true }
tracing-subscriber = "0.3"
aperture = { path = "aperture" }
