[workspace]
members = [ "aperture" ]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "GPL-3.0-or-later"
authors = ["The GNOME Project"]

[workspace.dependencies]
log = "0.4"
futures-channel = "0.3.30"
gst = { package = "gstreamer", version = "0.25.0-alpha" , features = ["v1_20"] }
gst-base = { package = "gstreamer-base", version = "0.25.0-alpha" }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.25.0-alpha", features = ["v1_20"] }
gst-video = { package = "gstreamer-video", version = "0.25.0-alpha" }
gtk = { package = "gtk4", version = "0.11.0-alpha", features = ["gnome_46", "v4_18"] }

[package]
name = "snapshot"
version = "46.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# This is manually enabled by meson
[features]
x11 = ["ashpd/gtk4_x11"]

[profile.release]
lto = true

[dependencies]
adw = { package = "libadwaita", version = "0.9.0-alpha", features = ["v1_8"] }
anyhow = "1.0"
ashpd = { version = "0.13.0-alpha", default-features = false, features = ["gtk4_wayland", "tracing", "async-io", "camera"] }
formatx = "0.2.4"
futures-channel = { workspace = true }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glycin = { package = "libglycin-rebind", version = "0.1.0-beta" }
glycin-gtk4 = { package = "libglycin-gtk4-rebind", version = "0.1.0-alpha" }
gst = { workspace = true }
gtk = { workspace = true, features = ["gnome_47"] }
log = { workspace = true }
tracing-subscriber = "0.3"
aperture = { path = "aperture" }

[profile.dev.package.rqrr]
opt-level = 3
