option(
  'profile',
  type: 'combo',
  choices: [
    'default',
    'development'
  ],
  value: 'default',
  description: 'The build profile for Snapshot. One of "default" or "development".'
)

option(
  'portal',
  type: 'boolean',
  value: false,
  description: 'Enables the usage of the XDG Camera Portal. By default this is Disabled. This is subject to change in a future major release'
)

option(
  'x11',
  type: 'feature',
  description: 'Enable X11 specific features.'
)
