[package]
authors.workspace = true
categories = ["multimedia", "os::linux-apis", "gui"]
description = "GTK Widget for cameras using gstreamer and pipewire"
edition.workspace = true
keywords = ["camera", "gtk", "gstreamer"]
license.workspace = true
name = "aperture"
repository = "https://gitlab.gnome.org/GNOME/snapshot"
documentation = "https://gnome.pages.gitlab.gnome.org/snapshot/aperture"
version = "0.9.2"
rust-version.workspace = true

[dependencies]
futures-channel = { workspace = true }
gst = { workspace = true }
gst-base = { package = "gstreamer-base", version = "0.23" }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.23" }
gst-video = { package = "gstreamer-video", version = "0.23" }
gtk = { workspace = true }
log = { workspace = true }
rqrr = { version = "0.10", default-features = false }
