[package]
authors.workspace = true
categories = ["multimedia", "os::linux-apis", "gui"]
description = "GTK Widget for cameras using gstreamer and pipewire"
edition.workspace = true
keywords = ["camera", "gtk", "gstreamer"]
license.workspace = true
name = "aperture"
repository = "https://gitlab.gnome.org/GNOME/snapshot"
documentation = "https://gnome.pages.gitlab.gnome.org/snapshot/aperture"
version = "0.11.0"
rust-version.workspace = true

[dependencies]
futures-channel = { workspace = true }
gst = { workspace = true }
gst-base = { workspace = true }
gst-pbutils = { workspace = true }
gst-video = { workspace = true }
gtk = { workspace = true }
log = { workspace = true }
rqrr = { version = "0.10", default-features = false }
